--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "@vitejs/plugin-vue": "^4.2.3"
   }
 }
