--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vue-cal": "^4.8.1"
+    "@vitejs/plugin-vue": "^4.2.3"
   }
 }
